{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 36,
  "lineage": "c57f3344-4fa4-5f90-98e3-a87a1ec98f4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:786054985583:internet-gateway/igw-0d2bdd1d4e145300d",
            "id": "igw-0d2bdd1d4e145300d",
            "owner_id": "786054985583",
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-igw"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-igw"
            },
            "vpc_id": "vpc-0a2619761e631c775"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:786054985583:loadbalancer/app/default-api-lb/2dfe8a1d97f23010",
            "arn_suffix": "app/default-api-lb/2dfe8a1d97f23010",
            "dns_name": "default-api-lb-614812865.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:786054985583:loadbalancer/app/default-api-lb/2dfe8a1d97f23010",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "default-api-lb",
            "security_groups": [
              "sg-055a3c6e25e2a6f0d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04652c49238823010"
              },
              {
                "subnet_id": "subnet-077c10ba02db24d60"
              }
            ],
            "subnets": [
              "subnet-04652c49238823010",
              "subnet-077c10ba02db24d60"
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "vpc_id": "vpc-0a2619761e631c775",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_security_group.elb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:786054985583:listener/app/default-api-lb/2dfe8a1d97f23010/bd86b3f4f1f4cb27",
            "certificate_arn": "arn:aws:acm:us-east-1:786054985583:certificate/6505a0d9-9161-4447-a91d-d212af17f9a9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:786054985583:targetgroup/default-quizzer-tg/5f4b11fe679b501c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:786054985583:listener/app/default-api-lb/2dfe8a1d97f23010/bd86b3f4f1f4cb27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:786054985583:loadbalancer/app/default-api-lb/2dfe8a1d97f23010",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.api-lb",
            "aws_lb_target_group.quizzer-tg",
            "aws_security_group.elb-sg",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc",
            "data.aws_acm_certificate.quizzer_domain",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-api-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:786054985583:listener/app/default-api-lb/2dfe8a1d97f23010/2933a1645c94dea6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:786054985583:listener/app/default-api-lb/2dfe8a1d97f23010/2933a1645c94dea6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:786054985583:loadbalancer/app/default-api-lb/2dfe8a1d97f23010",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "aws_lb.api-lb",
            "aws_security_group.elb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "quizzer-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:786054985583:targetgroup/default-quizzer-tg/5f4b11fe679b501c",
            "arn_suffix": "targetgroup/default-quizzer-tg/5f4b11fe679b501c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:786054985583:targetgroup/default-quizzer-tg/5f4b11fe679b501c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "default-quizzer-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 120,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0a2619761e631c775"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:786054985583:route-table/rtb-051c002dc6b20c95f",
            "id": "rtb-051c002dc6b20c95f",
            "owner_id": "786054985583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2bdd1d4e145300d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-rtb"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-rtb"
            },
            "vpc_id": "vpc-0a2619761e631c775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00997739c755593c0",
            "route_table_id": "rtb-051c002dc6b20c95f",
            "subnet_id": "subnet-04652c49238823010"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet-1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052b32352fb34f2a3",
            "route_table_id": "rtb-051c002dc6b20c95f",
            "subnet_id": "subnet-077c10ba02db24d60"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet-2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:786054985583:security-group/sg-055a3c6e25e2a6f0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055a3c6e25e2a6f0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default-elb-sg",
            "name_prefix": "",
            "owner_id": "786054985583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2619761e631c775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "quizzer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:786054985583:security-group/sg-0506b0ec98a6b38f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0506b0ec98a6b38f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-055a3c6e25e2a6f0d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "default-quizzer-sg",
            "name_prefix": "",
            "owner_id": "786054985583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2619761e631c775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:786054985583:subnet/subnet-04652c49238823010",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-04652c49238823010",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "786054985583",
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-subnet-1"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-subnet-1"
            },
            "vpc_id": "vpc-0a2619761e631c775"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:786054985583:subnet/subnet-077c10ba02db24d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-077c10ba02db24d60",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "786054985583",
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-subnet-2"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-subnet-2"
            },
            "vpc_id": "vpc-0a2619761e631c775"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:786054985583:vpc/vpc-0a2619761e631c775",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e693fab5f29fba47",
            "default_route_table_id": "rtb-02af8028e7f395638",
            "default_security_group_id": "sg-07c37586809dd3334",
            "dhcp_options_id": "dopt-0174347b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a2619761e631c775",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02af8028e7f395638",
            "owner_id": "786054985583",
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-vpc"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform",
              "Name": "default-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:786054985583:security-group/sg-0037ec2f570e8eff2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0037ec2f570e8eff2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0506b0ec98a6b38f8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "default-rds-sg",
            "name_prefix": "",
            "owner_id": "786054985583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "tags_all": {
              "Environment": "default",
              "ManagedBy": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2619761e631c775"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb-sg",
            "aws_security_group.quizzer-sg",
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}